# TanksKombat

./: .axisproj.json  .axproj.json  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
Classes/: AppDelegate.cpp  AppDelegate.h  Engine.cpp  Engine.h
Classes/Components/: AI.cpp  AI.h  Pathfinder.cpp  Pathfinder.h
Classes/GUI/: ModalDialog.cpp  ModalDialog.h  SimpleMenu.cpp  SimpleMenu.h  SimpleMenuItem.cpp  SimpleMenuItem.h
Classes/Math/: Pos2.h
Classes/Objects/: Bonus.cpp  Bonus.h  Explosion.cpp  Explosion.h  GameObject.cpp  GameObject.h  LevelGrid.cpp  LevelGrid.h  Projectile.cpp  Projectile.h  Tank.cpp  Tank.h  TiledSprite.cpp
Classes/Scenes/: AboutScene.cpp  AboutScene.h  BaseScene.cpp  BaseScene.h  GameSettingsScene.cpp  GameSettingsScene.h  GameplayScene.cpp  GameplayScene.h  HighScoresScene.cpp  HighScoresScene.h  MainMenuScene.cpp  MainMenuScene.h  SettingsScene.cpp  SettingsScene.h
Classes/SneakyInput/: SneakyButton.cpp  SneakyButton.h  SneakyButtonSkinnedBase.cpp  SneakyButtonSkinnedBase.h  SneakyJoystick.cpp  SneakyJoystick.h  SneakyJoystickSkinnedBase.cpp  SneakyJoystickSkinnedBase.h
Classes/Utils/: multicast.hpp
Content/: config.plist
Content/graphics/: sprites32.plist
Images/: sprites32.tps  tanks_logo.plist  tanks_logo.tps
Source/: AppDelegate.h  Engine.cpp
Source/Components/: AI.cpp  Pathfinder.h
Source/GUI/: SimpleMenu.cpp
Source/Objects/: LevelGrid.h  Projectile.cpp  TiledSprite.cpp  TiledSprite.h
Source/Scenes/: AboutScene.cpp  BaseScene.cpp  GameSettingsScene.cpp  HighScoresScene.cpp  HighScoresScene.h  MainMenuScene.cpp  SettingsScene.cpp
Source/SneakyInput/: SneakyButton.h
cocos2d/cocos/2d/: cocos2dx.props  libcocos2d.vcxproj
cocos2d/cocos/2d/libcocos2d_win10/: libcocos2d.vcxproj
cocos2d/cocos/2d/win10_props/: cocos2d_win10.props
cocos2d/cocos/platform/winrt/: CCGLViewImpl-winrt.h
proj.android/: .cproject  .project  AndroidManifest.xml  build.xml  settings.gradle
proj.android/app/: AndroidManifest.xml  build.gradle
proj.android/app/res/values/: strings.xml
proj.android/app/src/org/cocos2dx/lib/: SharedLoader.java
proj.android/jni/: Android.mk  Application.mk
proj.android/res/values/: strings.xml
proj.ios_mac/ios/targets/ios/: Info.plist  LaunchScreen.storyboard
proj.win10/: Tanks4.sln
proj.win10/App/: App.xaml  App.xaml.cpp  App.xaml.h  Package.appxmanifest  Tanks4.vcxproj  Tanks4.vcxproj.filters
proj.win10/App/Cocos2dEngine/: Cocos2dRenderer.cpp  Cocos2dRenderer.h  OpenGLES.cpp  OpenGLES.h  OpenGLESPage.xaml  OpenGLESPage.xaml.cpp  OpenGLESPage.xaml.h
proj.win32/: Tanks4.sln  Tanks4.vcxproj  Tanks4.vcxproj.filters  create package.bat  game.rc  main.cpp  resource.h
